fix errors and image of about

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Alpha Gym - No Limits. No Excuses. Just Results. Strength training, fat loss, and personal coaching." />
   <meta name="keywords" content="Alpha Gym, gym, fitness, strength training, personal trainer, fat loss" />
 
-  <link rel="icon" type="image/png" href="../../Images/image-removebg-preview (11).png" />
+  <link rel="icon" type="image/png" href="./Images/alpha-logo-original.png" />
   <link rel="stylesheet" href="/gym2.css" />
 
   <title>ALPHA GYM WEBSITE</title>
@@ -516,8 +516,7 @@
     </div>
   </div>
 
-  <script src="index.js"></script>
-  <script src="/common.js"></script>
+ 
 
   <div id="lightbox">
   <span id="lightboxClose">&times;</span>
